[tool.poetry]
name = "reactive-toga"
version = "0.1.0"
description = ""
authors = ["jnnkB <29376715+jnnkB@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toga = {version = "^0.3.0.dev28", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
